Added full text storage and retrieval
